--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/290860.pt">#Rio450</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-food-needs-of-vulnerable-afghans">UK supports food needs of vulnerable Afghans</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/natural-gas-and-crude-oil-business-delegation">Natural Gas and Crude Oil Business Delegation</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/238913.pt">Conferência sobre Eficiência Energética em Manaus</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/death-of-nelson-mandela">Death of Nelson Mandela</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-and-consulate-in-santiago-will-be-closed--3">British embassy and consulate in Santiago will be closed</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/statement-on-trade-deal-between-eu-and-us">Statement on trade deal between EU and US</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/186178.es-419">Haciendo memoria en el olvido</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/un-human-rights-council-the-united-kingdoms-voluntary-pledges-and-commitments-on-human-rights-2013--2">UN Human Rights Council - The United Kingdom&rsquo;s Voluntary Pledges and Commitments on Human Rights 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/287987.pt">Consulado promove recepção para empresas de Petróleo e Gás</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/eu-referendum-outcome-pm-statement-24-june-2016--2">EU referendum outcome: PM statement, 24 June 2016</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--41">Turks and Caicos Post Cabinet Meeting Statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/211747.bg">Дейвид Лидингтън оцени високо спасяването на българските евреи</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--35">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/consular-notice-about-demonstrations-in-kuwait--3">Consular notice about demonstrations in Kuwait</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/233437.pt">Infraestrutura e logística no Brasil</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/247699.lt">Kartu esame stipresni: būtina stiprinti stabilumą pasaulyje</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/248692.ko">주한영국대사관, 한국인 20 여명에게 영국 정부 쉐브닝 장학금 전달</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/important-changes-to-consular-registration">Important changes to consular registration</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
