--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -406,14 +406,14 @@
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
       <li><a href="http://www.downdc.gov.uk" class="govuk-link">Down District Council</a></li>
       <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
-      <li><a href="https://www.malvernhills.gov.uk/" class="govuk-link">Malvern Hills District Council</a></li>
-      <li><a href="http://www.staffsmoorlands.gov.uk" class="govuk-link">Staffordshire Moorlands District Council</a></li>
-      <li><a href="http://www.winchester.gov.uk" class="govuk-link">Winchester City Council</a></li>
-      <li><a href="http://www.northumberland.gov.uk" class="govuk-link">Northumberland County Council</a></li>
-      <li><a href="http://www.tamworth.gov.uk" class="govuk-link">Tamworth Borough Council</a></li>
-      <li><a href="http://www.cyberaware.gov.uk" class="govuk-link">Cyber Aware</a></li>
+      <li><a href="http://www.lancashire.gov.uk/" class="govuk-link">Lancashire County Council</a></li>
+      <li><a href="http://www.rotherham.gov.uk" class="govuk-link">Rotherham Metropolitan Borough Council</a></li>
       <li><a href="http://ec.europa.eu/citizens-initiative" class="govuk-link">The European Citizens&rsquo; Initiative</a></li>
-      <li><a href="http://www.centralbedfordshire.gov.uk/" class="govuk-link">Central Bedfordshire Council</a></li>
+      <li><a href="http://www.harlow.gov.uk" class="govuk-link">Harlow District Council</a></li>
+      <li><a href="https://www.lewes-eastbourne.gov.uk" class="govuk-link">Lewes District Council</a></li>
+      <li><a href="http://www.adur-worthing.gov.uk/" class="govuk-link">Adur &amp; Worthing Councils</a></li>
+      <li><a href="http://www.oldham.gov.uk/" class="govuk-link">Oldham Metropolitan Borough Council</a></li>
+      <li><a href="http://www.charnwood.gov.uk" class="govuk-link">Charnwood Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
