Hourly scheduled redeploy f5432038dca39f4f12b2a71c013283b7862948f7

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/minister-for-universities-and-science-in-paris--2">Minister for Universities and Science in Paris</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/264569.es-419">Ministro para Latinoamérica participa en el Chile Day 2014</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/294171.es-419">Ministro Británico de Estado para América Latina felicita al nuevo Vicepresidente de Guatemala</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/projects-funded-by-the-uk-fcos-global-prosperity-fund--2">Projects funded by the UK FCO’s Global Prosperity Fund</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/175727.es-419">Entrevista con el medallista olímpico venezolano Rubén Limardo</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/296916.pt">MAGNA CARTA</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/consular-enquiries-for-europe">Consular enquiries for Europe</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/hand-in-hand-with-a-more-dynamic-africa--2">Hand in hand with a more dynamic Africa</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/consular-notice-about-demonstrations-in-kuwait--3">Consular notice about demonstrations in Kuwait</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-food-needs-of-vulnerable-afghans">UK supports food needs of vulnerable Afghans</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/natural-gas-and-crude-oil-business-delegation">Natural Gas and Crude Oil Business Delegation</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--41">Turks and Caicos Post Cabinet Meeting Statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/211747.bg">Дейвид Лидингтън оцени високо спасяването на българските евреи</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--35">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/consular-notice-about-demonstrations-in-kuwait--3">Consular notice about demonstrations in Kuwait</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/233437.pt">Infraestrutura e logística no Brasil</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/247699.lt">Kartu esame stipresni: būtina stiprinti stabilumą pasaulyje</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/248692.ko">주한영국대사관, 한국인 20 여명에게 영국 정부 쉐브닝 장학금 전달</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/important-changes-to-consular-registration">Important changes to consular registration</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
