Hourly scheduled redeploy f5432038dca39f4f12b2a71c013283b7862948f7

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-food-needs-of-vulnerable-afghans">UK supports food needs of vulnerable Afghans</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/natural-gas-and-crude-oil-business-delegation">Natural Gas and Crude Oil Business Delegation</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--41">Turks and Caicos Post Cabinet Meeting Statement</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/211747.bg">Дейвид Лидингтън оцени високо спасяването на българските евреи</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--35">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/consular-notice-about-demonstrations-in-kuwait--3">Consular notice about demonstrations in Kuwait</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/233437.pt">Infraestrutura e logística no Brasil</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/247699.lt">Kartu esame stipresni: būtina stiprinti stabilumą pasaulyje</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/248692.ko">주한영국대사관, 한국인 20 여명에게 영국 정부 쉐브닝 장학금 전달</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/important-changes-to-consular-registration">Important changes to consular registration</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/263388.zh-tw">2014 台灣歐盟司法交流計畫即將在下週舉行</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/260600.cs">Evropské sankce: Nezbytné, efektivní a v pravý čas</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192253.he">סגן שר החוץ הבריטי מגנה את רצח החיילים הישראלים</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/232492.ja">Educational Testing Service (ETS)　について</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/179098.es-419">¡Wenlock y Mandeville buscan dónde estudiar en México!</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--7">Advice for British nationals in Chennai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-and-consulate-in-santiago-will-be-closed--2">British embassy and consulate in Santiago will be closed</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-in-cairo-closed-to-the-public--3">British Embassy in Cairo closed to the public</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-ambassador-honours-positive-role-of-gaa-at-london-gala-dinner--2">British Ambassador to Ireland honours role of the Gaelic Athletic Association</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192069.pt">Fórum atrai empresários interessados em parcerias em mega eventos</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
