--- a/document-types/asylum_support_decision.html
+++ b/document-types/asylum_support_decision.html
@@ -377,12 +377,12 @@
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/dk-v-secretary-of-state-for-the-home-department-as-02-04-2665">DK v Secretary of State for the Home Department: AS/02/04/2665</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/ah-v-secretary-of-state-for-the-home-department-as-13-07-30183">AH v Secretary of State for the Home Department: AS/13/07/30183</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/xc-v-secretary-of-state-for-the-home-department-as-18-06-38201">XC v Secretary of State for the Home Department: AS/18/06/38201</a></li>
-<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/rj-v-secretary-of-state-for-the-home-department-as-15-04-32984">RJ v Secretary of State for the Home Department: AS/15/04/32984</a></li>
-<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/mas-v-secretary-of-state-for-the-home-department-as-05-05-9315">MAS v Secretary of State for the Home Department: AS/05/05/9315</a></li>
+<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/jc-v-secretary-of-state-for-the-home-department-as-06-08-13935">JC v Secretary of State for the Home Department: AS/06/08/13935</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/a-e-h-v-secretary-of-state-for-the-home-department-as-05-10-10339">A E-H v Secretary of State for the Home Department: AS/05/10/10339</a></li>
-<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/hm-v-secretary-of-state-for-the-home-department-as-15-07-33510">HM v Secretary of State for the Home Department: AS/15/07/33510</a></li>
-<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/vc-v-secretary-of-state-for-the-home-department-as-02-04-2505">VC v Secretary of State for the Home Department: AS/02/04/2505</a></li>
+<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/mas-v-secretary-of-state-for-the-home-department-as-05-05-9315">MAS v Secretary of State for the Home Department: AS/05/05/9315</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/my-v-secretary-of-state-for-the-home-department-as-12-10-29033">MY v Secretary of State for the Home Department: AS/12/10/29033</a></li>
+<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/yi-v-secretary-of-state-for-the-home-department-as-13-07-30154">YI v Secretary of State for the Home Department: AS/13/07/30154</a></li>
+<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/jkv-v-secretary-of-state-for-the-home-department-as-12-03-28234">JKV v Secretary of State for the Home Department: AS/12/03/28234</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=asylum_support_decision&amp;count=10">Source query from Search API</a></p>
 
