--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -371,16 +371,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
+<li><a href="https://www.gov.ukhttp//www.downdc.gov.uk">Down District Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.hants.gov.uk">Hampshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bristol.gov.uk">Bristol City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.ealing.gov.uk">London Borough of Ealing Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.winchester.gov.uk">Winchester City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.dundeecity.gov.uk">Dundee City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.hastings.gov.uk">Hastings Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//findyourmp.parliament.uk/">Find your MP - UK Parliament</a></li>
-<li><a href="https://www.gov.ukhttp//www.medway.gov.uk">Medway Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.tewkesburybc.gov.uk">Tewkesbury Borough Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.lancashire.gov.uk/">Lancashire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.rotherham.gov.uk">Rotherham Metropolitan Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//ec.europa.eu/citizens-initiative">The European Citizens&rsquo; Initiative</a></li>
+<li><a href="https://www.gov.ukhttp//www.harlow.gov.uk">Harlow District Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.lewes-eastbourne.gov.uk">Lewes District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.adur-worthing.gov.uk/">Adur &amp; Worthing Councils</a></li>
+<li><a href="https://www.gov.ukhttp//www.oldham.gov.uk/">Oldham Metropolitan Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.charnwood.gov.uk">Charnwood Borough Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
