--- a/manual/sentry.html
+++ b/manual/sentry.html
@@ -187,6 +187,12 @@
           </li>
         </ul>
       </li>
+      <li>
+        <a href="#special-sentry-accounts"><span>Special Sentry accounts</span></a>
+      </li>
+      <li>
+        <a href="#gds-wide-usage-of-sentry"><span>GDS-wide usage of Sentry</span></a>
+      </li>
     </ul>
   </li>
 </ul>
@@ -201,7 +207,7 @@
             
   <p><a href='/manual.html#monitoring'>Monitoring</a></p>   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/5ee999f62c1f39456845950c3c0f52c66620c0d6">15 Mar 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/9136362f17338f8d5a5a4553cba60878ac2b1aa0">8 Apr 2021</a>
 </div>
 
  <h1 id='header'>Sentry</h1> <p><a href="https://sentry.io/govuk/">Sentry</a> is a service that collates errors that happen on GOV.UK in one
@@ -371,6 +377,13 @@ the trash can and selecting &ldquo;Delete and discard future events&rdquo;.</p>
 our <a href="#rate-limiting">Sentry quota</a>. It is possible to &ldquo;undiscard&rdquo; the issue later,
 but this will only capture new events. Any events prior to the &ldquo;undiscard&rdquo; action
 are lost.</p>
+<h2 id='special-sentry-accounts'>Special Sentry accounts</h2><p>There is a <code>2ndLineBot</code> member on the <a href="https://sentry.io/settings/govuk/members/">members list</a>
+which is set up so that a weekly Sentry report is sent to the 2nd line email address.
+This bot account should not be deleted.</p>
+<h2 id='gds-wide-usage-of-sentry'>GDS-wide usage of Sentry</h2><p>Sentry is used by several programmes in GDS, not just GOV.UK. A report,
+<a href="https://docs.google.com/document/d/1yVa9iiu-DayGy-MtlrdXeV0E09CsetUenZJCmusLfLg/edit">GDS use of Sentry.io</a>,
+covers this in more detail, including documenting some of the limitations of the
+setup.</p>
 
 
   <div class='related-content'>
