--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -405,15 +405,15 @@
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
       <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
-      <li><a href="http://www.nottinghamshire.gov.uk" class="govuk-link">Nottinghamshire County Council</a></li>
-      <li><a href="http://www.liverpool.gov.uk" class="govuk-link">Liverpool City Council</a></li>
-      <li><a href="http://www.antrim.gov.uk/" class="govuk-link">Antrim Borough Council</a></li>
-      <li><a href="http://www.ealing.gov.uk" class="govuk-link">London Borough of Ealing Council</a></li>
       <li><a href="http://www.bristol.gov.uk" class="govuk-link">Bristol City Council</a></li>
-      <li><a href="http://www.tamworth.gov.uk" class="govuk-link">Tamworth Borough Council</a></li>
+      <li><a href="http://www.ealing.gov.uk" class="govuk-link">London Borough of Ealing Council</a></li>
       <li><a href="http://www.winchester.gov.uk" class="govuk-link">Winchester City Council</a></li>
-      <li><a href="https://www.lewes-eastbourne.gov.uk" class="govuk-link">Lewes District Council</a></li>
-      <li><a href="http://www.west-dunbarton.gov.uk/" class="govuk-link">West Dunbartonshire Council</a></li>
+      <li><a href="http://www.dundeecity.gov.uk" class="govuk-link">Dundee City Council</a></li>
+      <li><a href="http://www.hastings.gov.uk" class="govuk-link">Hastings Borough Council</a></li>
+      <li><a href="http://findyourmp.parliament.uk/" class="govuk-link">Find your MP - UK Parliament</a></li>
+      <li><a href="http://www.medway.gov.uk" class="govuk-link">Medway Council</a></li>
+      <li><a href="http://www.tewkesburybc.gov.uk" class="govuk-link">Tewkesbury Borough Council</a></li>
+      <li><a href="http://www.lancashire.gov.uk/" class="govuk-link">Lancashire County Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
