--- a/apps/frontend.html
+++ b/apps/frontend.html
@@ -418,7 +418,7 @@
       <li><a href="https://www.gov.uk/vehicle-tax" class="govuk-link">Tax your vehicle</a></li>
       <li><a href="https://www.gov.uk/check-vehicle-tax" class="govuk-link">Check if a vehicle is taxed</a></li>
       <li><a href="https://www.gov.uk/get-information-about-a-company" class="govuk-link">Get information about a company</a></li>
-      <li><a href="https://www.gov.uk/order-coronavirus-rapid-lateral-flow-tests" class="govuk-link">Schools, nurseries and colleges testing: order coronavirus (COVID-19) rapid lateral flow home test kits </a></li>
+      <li><a href="https://www.gov.uk/order-coronavirus-rapid-lateral-flow-tests" class="govuk-link">Order coronavirus (COVID-19) rapid lateral flow tests</a></li>
       <li><a href="https://www.gov.uk/provide-journey-contact-details-before-travel-uk" class="govuk-link">Fill in your passenger locator form</a></li>
       <li><a href="https://www.gov.uk/check-mot-status" class="govuk-link">Check the MOT status of a vehicle</a></li>
       <li><a href="https://www.gov.uk/sign-in-childcare-account" class="govuk-link">Sign in to your childcare account</a></li>
