--- a/apps/publisher.html
+++ b/apps/publisher.html
@@ -417,7 +417,7 @@
       <li><a href="https://www.gov.uk/get-information-about-a-company" class="govuk-link">Get information about a company</a></li>
       <li><a href="https://www.gov.uk/get-coronavirus-test" class="govuk-link">Get a free PCR test to check if you have coronavirus</a></li>
       <li><a href="https://www.gov.uk/universal-credit" class="govuk-link">Universal Credit</a></li>
-      <li><a href="https://www.gov.uk/order-coronavirus-rapid-lateral-flow-tests" class="govuk-link">Schools, nurseries and colleges testing: order coronavirus (COVID-19) rapid lateral flow home test kits </a></li>
+      <li><a href="https://www.gov.uk/order-coronavirus-rapid-lateral-flow-tests" class="govuk-link">Order coronavirus (COVID-19) rapid lateral flow tests</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
