--- a/document-types/answer.html
+++ b/document-types/answer.html
@@ -333,7 +333,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: answer</h1>
 
-  <p>There are <strong>759</strong> pages with document type
+  <p>There are <strong>758</strong> pages with document type
 &lsquo;answer&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -376,13 +376,13 @@
 <li><a href="https://www.gov.uk/get-coronavirus-test">Get a free PCR test to check if you have coronavirus</a></li>
 <li><a href="https://www.gov.uk/national-minimum-wage-rates">National Minimum Wage and National Living Wage rates</a></li>
 <li><a href="https://www.gov.uk/log-in-file-self-assessment-tax-return">File your Self Assessment tax return online</a></li>
-<li><a href="https://www.gov.uk/getting-tested-for-coronavirus">Find out which coronavirus (COVID-19) test you should get</a></li>
 <li><a href="https://www.gov.uk/benefits-calculators">Benefits calculators</a></li>
 <li><a href="https://www.gov.uk/contact-hmrc">Contact HMRC</a></li>
 <li><a href="https://www.gov.uk/apply-apprenticeship">Find an apprenticeship</a></li>
 <li><a href="https://www.gov.uk/tax-free-childcare">Tax-Free Childcare</a></li>
 <li><a href="https://www.gov.uk/dbs-update-service">DBS Update Service</a></li>
 <li><a href="https://www.gov.uk/vehicle-tax-refund">Cancel your vehicle tax and get a refund</a></li>
+<li><a href="https://www.gov.uk/apply-national-insurance-number">Apply for a National Insurance number</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=answer&amp;count=10">Source query from Search API</a></p>
 
