--- a/document-types/transaction.html
+++ b/document-types/transaction.html
@@ -379,7 +379,7 @@
 <li><a href="https://www.gov.uk/vehicle-tax">Tax your vehicle</a></li>
 <li><a href="https://www.gov.uk/check-vehicle-tax">Check if a vehicle is taxed</a></li>
 <li><a href="https://www.gov.uk/get-information-about-a-company">Get information about a company</a></li>
-<li><a href="https://www.gov.uk/order-coronavirus-rapid-lateral-flow-tests">Schools, nurseries and colleges testing: order coronavirus (COVID-19) rapid lateral flow home test kits </a></li>
+<li><a href="https://www.gov.uk/order-coronavirus-rapid-lateral-flow-tests">Order coronavirus (COVID-19) rapid lateral flow tests</a></li>
 <li><a href="https://www.gov.uk/provide-journey-contact-details-before-travel-uk">Fill in your passenger locator form</a></li>
 <li><a href="https://www.gov.uk/check-mot-status">Check the MOT status of a vehicle</a></li>
 <li><a href="https://www.gov.uk/sign-in-childcare-account">Sign in to your childcare account</a></li>
