Hourly scheduled redeploy f63ea54017d11356af4657967ae0d3fe1903f0a9

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/263388.zh-tw">2014 台灣歐盟司法交流計畫即將在下週舉行</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/260600.cs">Evropské sankce: Nezbytné, efektivní a v pravý čas</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/192253.he">סגן שר החוץ הבריטי מגנה את רצח החיילים הישראלים</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/232492.ja">Educational Testing Service (ETS)　について</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/179098.es-419">¡Wenlock y Mandeville buscan dónde estudiar en México!</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--7">Advice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-and-consulate-in-santiago-will-be-closed--2">British embassy and consulate in Santiago will be closed</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-in-cairo-closed-to-the-public--3">British Embassy in Cairo closed to the public</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-ambassador-honours-positive-role-of-gaa-at-london-gala-dinner--2">British Ambassador to Ireland honours role of the Gaelic Athletic Association</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/192069.pt">Fórum atrai empresários interessados em parcerias em mega eventos</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/minister-for-universities-and-science-in-paris--2">Minister for Universities and Science in Paris</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/264569.es-419">Ministro para Latinoamérica participa en el Chile Day 2014</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/294171.es-419">Ministro Británico de Estado para América Latina felicita al nuevo Vicepresidente de Guatemala</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/projects-funded-by-the-uk-fcos-global-prosperity-fund--2">Projects funded by the UK FCO’s Global Prosperity Fund</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/175727.es-419">Entrevista con el medallista olímpico venezolano Rubén Limardo</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/296916.pt">MAGNA CARTA</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/consular-enquiries-for-europe">Consular enquiries for Europe</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/hand-in-hand-with-a-more-dynamic-africa--2">Hand in hand with a more dynamic Africa</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/consular-notice-about-demonstrations-in-kuwait--3">Consular notice about demonstrations in Kuwait</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/natural-gas-and-crude-oil-business-delegation">Natural Gas and Crude Oil Business Delegation</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
