--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -404,16 +404,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
+      <li><a href="http://www.northumberland.gov.uk" class="govuk-link">Northumberland County Council</a></li>
+      <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
+      <li><a href="http://www.oadby-wigston.gov.uk" class="govuk-link">Oadby and Wigston Borough Council</a></li>
+      <li><a href="http://www.downdc.gov.uk" class="govuk-link">Down District Council</a></li>
       <li><a href="http://www.dundeecity.gov.uk" class="govuk-link">Dundee City Council</a></li>
       <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
-      <li><a href="http://www.oadby-wigston.gov.uk" class="govuk-link">Oadby and Wigston Borough Council</a></li>
-      <li><a href="http://www.bromsgrove.gov.uk" class="govuk-link">Bromsgrove District Council</a></li>
-      <li><a href="http://www.lancashire.gov.uk/" class="govuk-link">Lancashire County Council</a></li>
-      <li><a href="http://www.parliament.uk/business/publications/hansard/" class="govuk-link">Hansard - UK Parliament</a></li>
-      <li><a href="http://www.powys.gov.uk" class="govuk-link">Powys County Council</a></li>
-      <li><a href="http://www.shetland.gov.uk" class="govuk-link">Shetland Islands Council</a></li>
-      <li><a href="http://www.thanet.gov.uk" class="govuk-link">Thanet District Council</a></li>
-      <li><a href="http://www.cotswold.gov.uk" class="govuk-link">Cotswold District Council</a></li>
+      <li><a href="http://www.centralbedfordshire.gov.uk/" class="govuk-link">Central Bedfordshire Council</a></li>
+      <li><a href="http://www.hastings.gov.uk" class="govuk-link">Hastings Borough Council</a></li>
+      <li><a href="http://www.tamworth.gov.uk" class="govuk-link">Tamworth Borough Council</a></li>
+      <li><a href="http://www.west-dunbarton.gov.uk/" class="govuk-link">West Dunbartonshire Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
