--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/293828.es-419">Call for Security and Justice Concept Bids</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/angolan-chevening-scholars-reception-in-luanda--2">Reception for Angolan Chevening Scholars held in Luanda</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/233437.pt">Infraestrutura e logística no Brasil</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-delegation-runs-second-successful-course-about-understanding-nato--2">UK delegation runs second successful course about understanding NATO</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/232335.es-419">Doce universidades británicas visitaron la Argentina</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/un-human-rights-council-the-united-kingdoms-voluntary-pledges-and-commitments-on-human-rights-2013--2">UN Human Rights Council - The United Kingdom&rsquo;s Voluntary Pledges and Commitments on Human Rights 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/projects-funded-by-the-uk-fcos-global-prosperity-fund--2">Projects funded by the UK FCO’s Global Prosperity Fund</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/211480.pt">Programa Sirius anuncia primeiros vencedores</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/247699.lt">Kartu esame stipresni: būtina stiprinti stabilumą pasaulyje</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/186178.es-419">Haciendo memoria en el olvido</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-30th-session-statement-by-the-united-kingdom-of-great-britain-and-northern-ireland--3">Human Rights Council, 30th Session: Statement by the United Kingdom of Great Britain and Northern Ireland</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192303.es">Listado de universidades, colegios, y distribuidores de material didáctico participantes en la feria</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-expats-dont-lose-your-vote-in-the-european-parliament-elections--2">British expats: Don’t lose your vote in the European Parliament elections</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192676.pt">São Paulo e Rio recebem a maior feira de educação britânica já organizada no país</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-calls-for-closer-joint-work-in-south-east-asia-to-protect-children-from-trafficking--2">UK calls for closer joint work in South East Asia to protect children from trafficking</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/william-hague-and-angelina-jolie-visit-rwanda">William Hague and Angelina Jolie visit Rwanda</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/171850.es-419">G8: Oportunidades para todos, incluyendo Honduras</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--32">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/twentieth-session-of-the-universal-periodic-review-working-group-geneva-27-october-to-7-november-2014--2">Twentieth Session of the Universal Periodic Review Working Group, Geneva, 27 October to 7 November 2014</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/232340.es">Expertos internacionales analizan planes nacionales de empresa y derechos humanos</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
