--- a/document-types/utaac_decision.html
+++ b/document-types/utaac_decision.html
@@ -333,7 +333,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: utaac_decision</h1>
 
-  <p>There are <strong>1113</strong> pages with document type
+  <p>There are <strong>1114</strong> pages with document type
 &lsquo;utaac_decision&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -381,8 +381,8 @@
 <li><a href="https://www.gov.uk/administrative-appeals-tribunal-decisions/jw-v-wirral-metropolitan-borough-council-sen-2021-ukut-70-aac">JW v Wirral Metropolitan Borough Council (SEN): [2021] UKUT 70 (AAC)</a></li>
 <li><a href="https://www.gov.uk/administrative-appeals-tribunal-decisions/ms-v-secretary-of-state-for-work-and-pensions-dla-and-pip-2021-ukut-41-aac">MS v Secretary of State for Work and Pensions (DLA and PIP): [2021] UKUT 41 (AAC)</a></li>
 <li><a href="https://www.gov.uk/administrative-appeals-tribunal-decisions/pr-v-secretary-of-state-for-work-and-pensions-pip-2021-ukut-35-aac">PR v Secretary of State for Work and Pensions (PIP): [2021] UKUT 35 (AAC)</a></li>
+<li><a href="https://www.gov.uk/administrative-appeals-tribunal-decisions/mh-v-secretary-of-state-for-work-and-pensions-uc-2021-ukut-46-aac">NM v Secretary of State for Work and Pensions (UC): [2021] UKUT 46 (AAC)</a></li>
 <li><a href="https://www.gov.uk/administrative-appeals-tribunal-decisions/rj-gmcl-and-cs-v-secretary-of-state-for-work-and-pensions-v-rj-pip-2017-ukut-105-aac">RJ, GMcL and CS v Secretary of State for Work and Pensions v RJ (PIP): [2017] UKUT 105 (AAC) ; [2017] AACR 32</a></li>
-<li><a href="https://www.gov.uk/administrative-appeals-tribunal-decisions/r-criminal-injuries-compensation-authority-v-first-tier-tribunal-cic-2018-ukut-439-aac">R(Criminal Injuries Compensation Authority) v First-tier Tribunal (CIC): [2018] UKUT 439 (AAC);[2019] AACR 18</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=utaac_decision&amp;count=10">Source query from Search API</a></p>
 
