--- a/document-types/employment_tribunal_decision.html
+++ b/document-types/employment_tribunal_decision.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: employment_tribunal_decision</h1>
 
-  <p>There are <strong>74040</strong> pages with document type
+  <p>There are <strong>74042</strong> pages with document type
 &lsquo;employment_tribunal_decision&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -364,7 +364,7 @@
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/mr-n-a-ashraf-v-sgl-co-packing-ltd-2406259-2019">Mr N A Ashraf v SGL Co Packing Ltd: 2406259/2019</a></li>
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/mr-m-master-v-springfields-fuels-ltd-2413565-2018">Mr M Master v Springfields Fuels Ltd: 2413565/2018</a></li>
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/mrs-g-yearwood-v-department-of-work-and-pensions-3307407-2018">Mrs G Yearwood v Department of Work and Pensions: 3307407/2018</a></li>
-<li><a href="https://www.gov.uk/employment-tribunal-decisions/ms-seyi-omooba-v-michael-garret-associates-ltd-t-slash-a-global-artists-and-leicester-theatre-trust-ltd-2202946-slash-2019-and-2602362-slash-2019">Ms Seyi Omooba v Michael Garret Associates Ltd T/a Global Artists and Leicester Theatre Trust Ltd: 2202946/2019 and 2602362/2019</a></li>
+<li><a href="https://www.gov.uk/employment-tribunal-decisions/ms-seyi-omooba-v-michael-garret-associates-ltd-t-slash-a-global-artists-and-leicester-theatre-trust-ltd-2202946-slash-2019-and-2602362-slash-2019">Ms S Omooba v Michael Garret Associates Ltd T/a Global Artists and Leicester Theatre Trust Ltd: 2202946/2019 and 2602362/2019</a></li>
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/mr-l-fenniche-v-kuwait-health-office-and-the-government-of-the-state-of-kuwait-2204871-slash-2019">Mr L Fenniche v Kuwait Health Office and The Government of the State of Kuwait: 2204871/2019</a></li>
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/philip-staines-v-north-yorkshire-fire-and-rescue-service-1805174-slash-2020">P Staines v North Yorkshire Fire and Rescue Service: 1805174/2020</a></li>
 <li><a href="https://www.gov.uk/employment-tribunal-decisions/mr-waskowycy-v-biffa-municipal-ltd-3323540-slash-2019">Mr Waskowycy v Biffa Municipal Ltd: 3323540/2019</a></li>
