Hourly scheduled redeploy 64249a5800f0e6c1e91046b1dec10261c1ba0e3b

--- a/document-types/smart_answer.html
+++ b/document-types/smart_answer.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: smart_answer</h1>
 
-  <p>There are <strong>0</strong> pages with document type
+  <p>There are <strong>34</strong> pages with document type
 &lsquo;smart_answer&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -359,7 +359,21 @@
 <td>services</td>
 </tr>
         </table>
-      </div>
+      </div><h2 id='example-pages'>Example pages</h2>
+<ul>
+<li><a href="https://www.gov.uk/state-pension-age">Check your State Pension age</a></li>
+<li><a href="https://www.gov.uk/business-coronavirus-support-finder">Find coronavirus financial support for your business</a></li>
+<li><a href="https://www.gov.uk/check-uk-visa">Check if you need a UK visa</a></li>
+<li><a href="https://www.gov.uk/calculate-your-holiday-entitlement">Calculate holiday entitlement</a></li>
+<li><a href="https://www.gov.uk/student-finance-calculator">Student finance calculator</a></li>
+<li><a href="https://www.gov.uk/calculate-your-redundancy-pay">Calculate your statutory redundancy pay</a></li>
+<li><a href="https://www.gov.uk/find-coronavirus-support">Find out what support you can get if you’re affected by coronavirus</a></li>
+<li><a href="https://www.gov.uk/child-benefit-tax-calculator">Child Benefit tax calculator</a></li>
+<li><a href="https://www.gov.uk/pay-leave-for-parents">Check if you can get leave or pay when you have a child</a></li>
+<li><a href="https://www.gov.uk/report-a-lost-or-stolen-passport">Cancel a lost or stolen passport</a></li>
+</ul>
+<p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=smart_answer&amp;count=10">Source query from Search API</a></p>
+
 
             
           </main>
