--- a/document-types/decision.html
+++ b/document-types/decision.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: decision</h1>
 
-  <p>There are <strong>7007</strong> pages with document type
+  <p>There are <strong>7006</strong> pages with document type
 &lsquo;decision&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -368,10 +368,10 @@
 <li><a href="https://www.gov.uk/government/publications/teacher-misconduct-panel-outcome-mr-peter-drake">Teacher misconduct panel outcome: Mr Peter Drake</a></li>
 <li><a href="https://www.gov.uk/government/publications/suspended-licences-for-manufacturers-and-wholesalers-of-medicines">Suspended and revoked licences and registrations for manufacturers and wholesalers of medicines and ingredients</a></li>
 <li><a href="https://www.gov.uk/government/publications/great-britain-marketing-authorisations-mas-for-centrally-authorised-products-caps">Great Britain Marketing Authorisations (MAs) for Centrally Authorised Products (CAPs)</a></li>
-<li><a href="https://www.gov.uk/government/publications/teacher-misconduct-panel-outcome-mr-spencer-radford">Teacher misconduct panel outcome: Mr Spencer Radford</a></li>
 <li><a href="https://www.gov.uk/government/publications/human-and-veterinary-medicines-register-of-licensed-wholesale-distribution-sites">Human and veterinary medicines: register of licensed wholesale distribution sites</a></li>
 <li><a href="https://www.gov.uk/government/publications/regulatory-judgements-and-regulatory-notices">Regulatory judgements and notices, and gradings under review</a></li>
 <li><a href="https://www.gov.uk/government/publications/teacher-misconduct-panel-outcome-mr-john-wiseman">Teacher misconduct panel outcome: Mr John Wiseman</a></li>
+<li><a href="https://www.gov.uk/government/publications/teacher-misconduct-panel-outcome-mr-james-dathan">Teacher misconduct panel outcome: Mr James Dathan</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=decision&amp;count=10">Source query from Search API</a></p>
 
