--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
+<li><a href="https://www.gov.ukhttp//www.mendip.gov.uk">Mendip District Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.malvernhills.gov.uk/">Malvern Hills District Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.moneyadviceservice.org.uk/en/categories/managing-debt">Debt management - Money Advice Service</a></li>
 <li><a href="https://www.gov.ukhttp//www.ne-derbyshire.gov.uk">North East Derbyshire District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.flintshire.gov.uk">Flintshire County Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/coronavirus-covid-19/coronavirus-vaccination/">Book a coronavirus vaccination - NHS</a></li>
-<li><a href="https://www.gov.ukhttp//ec.europa.eu/citizens-initiative">The European Citizens&rsquo; Initiative</a></li>
-<li><a href="https://www.gov.ukhttps//www.ncsc.gov.uk">National Cyber Security Centre</a></li>
+<li><a href="https://www.gov.ukhttp//www.parliament.uk/business/publications/hansard/">Hansard - UK Parliament</a></li>
+<li><a href="https://www.gov.ukhttp//www.canterbury.gov.uk">Canterbury City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.bromsgrove.gov.uk">Bromsgrove District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.basingstoke.gov.uk">Basingstoke and Deane Borough Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.justice.gov.uk/courts/procedure-rules/family">Family Procedure Rules</a></li>
-<li><a href="https://www.gov.ukhttp//www.richmondshire.gov.uk">Richmondshire District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.cotswold.gov.uk">Cotswold District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.staffsmoorlands.gov.uk">Staffordshire Moorlands District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.liverpool.gov.uk">Liverpool City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.iwight.com">Isle of Wight Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
